--- a/Pastry/nbproject/project.properties
+++ b/Pastry/nbproject/project.properties
@@ -29,11 +29,11 @@ dist.jar=${dist.dir}/Pastry.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.FreePastry-2.1.jar=../Pruebas Pastry 2/PastryChat-master/FreePastry-2.1.jar
+file.reference.FreePastry-2.1.zip=FreePastry-2.1.zip
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.FreePastry-2.1.jar}
+    ${file.reference.FreePastry-2.1.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
